--- a/.github/workflows/sync_to_hf.yaml
+++ b/.github/workflows/sync_to_hf.yaml
@@ -8,11 +8,22 @@ jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
     steps:
+      - name: Install Git LFS
+        run: git lfs install
+
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
           lfs: true
+
+      - name: Fetch LFS Object
+        run: git lfs pull
+
+      - name: Debug LFS Issue
+        run: git lfs logs last || echo "No LFS errors logged"
+
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push -f https://kaushiktd:$HF_TOKEN@huggingface.co/spaces/kaushiktd/file_rag main
+        run:
+          git push -f https://kaushiktd:$HF_TOKEN@huggingface.co/spaces/kaushiktd/file_rag main
